# Haskell-Course-2026

./: README.md
.github/workflows/: haskell.yml
homeworks/hw1/: Solution.hs
homeworks/hw2/: Solution.hs
homeworks/hw3/: Solution.hs
homeworks/hw4/: Solution.hs
homeworks/hw5/: Solution.hs
project/: .gitignore  README.md  description.md  project.cabal  stack.yaml
project/app/: Main.hs
project/src/: Main.hs  ZKAlgebra.hs
project/src/ZKAlgebra/: Algebra.hs  Field.hs  Multilinear.hs  NTT.hs  Polynomial.hs
project/src/ZKAlgebra/Crypto/: FiatShamir.hs  MiMC.hs  Sumcheck.hs
project/test/: Spec.hs
project/test/Test/: FiatShamir.hs  Field.hs  MiMC.hs  Multilinear.hs  NTT.hs  Polynomial.hs  Sumcheck.hs
