cabal-version:       2.4
name:                project
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     ZKAlgebra
                     , ZKAlgebra.Algebra
                     , ZKAlgebra.Field
                     , ZKAlgebra.Multilinear
                     , ZKAlgebra.NTT
                     , ZKAlgebra.Polynomial
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

executable zk-algebra-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , project
  default-language:    Haskell2010

test-suite zk-algebra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Field
                     , Test.Multilinear
                     , Test.NTT
                     , Test.Polynomial
  build-depends:       base >= 4.7 && < 5
                     , project
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , QuickCheck
                     , vector
  default-language:    Haskell2010
